src/test/ui/imports/glob-resolve1.stderr
error[E0425]: cannot find function `fpriv` in this scope
  --> $DIR/glob-resolve1.rs:26:5
   |
LL |     fpriv();
   |     ^^^^^ not found in this scope
   |
note: function `bar::fpriv` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:7:5
   |
LL |     fn fpriv() {}
   |     ^^^^^^^^^^ not accessible

error[E0425]: cannot find function `epriv` in this scope
  --> $DIR/glob-resolve1.rs:27:5
   |
LL |     epriv();
   |     ^^^^^ not found in this scope
   |
note: function `bar::epriv` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:9:9
   |
LL |         fn epriv();
   |         ^^^^^^^^^^^ not accessible

error[E0423]: expected value, found enum `B`
  --> $DIR/glob-resolve1.rs:28:5
   |
LL |     B;
   |     ^
   |
note: the enum is defined here
  --> $DIR/glob-resolve1.rs:14:5
   |
LL | /     pub enum B {
LL | |         B1,
LL | |     }
   | |_____^
help: you might have meant to use the following enum variant
   |
LL |     B::B1;
   |     ~~~~~

error[E0425]: cannot find value `C` in this scope
  --> $DIR/glob-resolve1.rs:29:5
   |
LL |     C;
   |     ^ not found in this scope
   |
note: unit struct `bar::C` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:18:5
   |
LL |     struct C;
   |     ^^^^^^^^^ not accessible

error[E0425]: cannot find function `import` in this scope
  --> $DIR/glob-resolve1.rs:30:5
   |
LL |     import();
   |     ^^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL | use other::import;
   |

error[E0412]: cannot find type `A` in this scope
  --> $DIR/glob-resolve1.rs:32:11
   |
LL |     pub enum B {
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<A>();
   |           ^ help: an enum with a similar name exists: `B`
   |
note: enum `bar::A` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:11:5
   |
LL |     enum A {
   |     ^^^^^^ not accessible

error[E0412]: cannot find type `C` in this scope
  --> $DIR/glob-resolve1.rs:33:11
   |
LL |     pub enum B {
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<C>();
   |           ^ help: an enum with a similar name exists: `B`
   |
note: struct `bar::C` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:18:5
   |
LL |     struct C;
   |     ^^^^^^^^^ not accessible

error[E0412]: cannot find type `D` in this scope
  --> $DIR/glob-resolve1.rs:34:11
   |
LL |     pub enum B {
   |     ---------- similarly named enum `B` defined here
...
LL |     foo::<D>();
   |           ^ help: an enum with a similar name exists: `B`
   |
note: type alias `bar::D` exists but is inaccessible
  --> $DIR/glob-resolve1.rs:20:5
   |
LL |     type D = isize;
   |     ^^^^^^^^^^^^^^^ not accessible

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0412, E0423, E0425.
For more information about an error, try `rustc --explain E0412`.
